contest page adjustments

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 		<div class="popup-content">
 			<h2>Start Saving Again!</h2>
 			<p>Make a deposit by October 1st to enter drawing for School
-				Supplies Box!</p>
+				Supplies Box! <strong>10 Winners!</strong></p>
 			<span class="close-contests">&times;</span>
 			<img src="images/SCHOOLSUPPLIESBOX.jpg"
 				alt="Back to School Contest">
