--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 								class="login-button">Log In</a>
 						</li>
 						<li>
-							<a href="#menu">Menu</a>
+							<a href="#menu">
+								<span class="menu-text">Menu</span>
+
+							</a>
 						</li>
 					</ul>
 				</nav>
