--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -112,7 +112,7 @@
                                 deposits and
                                 deliver
                                 them
-                                to participating bank
+                                to a participating bank
                                 branch. Request Volunteer training
                                 from
                                 School Savings.
@@ -139,7 +139,7 @@
                                 CONTEST
                                 to
                                 students,
-                                parents and
+                                parents and the
                                 media to
                                 FIRE-UP participation.
                             </p>
