--- a/testimonials.html
+++ b/testimonials.html
@@ -104,6 +104,20 @@
                                     <p>School Savings streamlined our
                                         existing
                                         MiniBank program.</p>
+                                    <p>"First Interstate has hosted a
+                                        school banking program for 20
+                                        years, much
+                                        of it using an in-house system
+                                        that required manual posting.
+                                        Switching
+                                        to School Savings™ and utilizing
+                                        its online management and
+                                        electronic
+                                        deposit systems has helped make
+                                        our program more streamlined and
+                                        convenient for both our school
+                                        banking customers and our
+                                        employees."</p>
                                 </div>
 
                             </li>
@@ -120,6 +134,19 @@
                                         class="fa-solid fa-apple-whole"></i>
                                     <p>Our
                                         schools love the program!</p>
+                                    <p>"We used School Savings' school
+                                        banking technology for
+                                        twenty-four (24)
+                                        years beginning with their
+                                        disk-based program. In 2002 we
+                                        moved to their
+                                        cloud-based system and tripled
+                                        our number of schools to 2500.
+                                        Their
+                                        technology reduced our school
+                                        banking Operations staff from 28
+                                        to 2
+                                        before the merger."</p>
                                 </div>
                             </li>
                             <li>
@@ -138,6 +165,16 @@
                                         our
                                         staffing
                                         requirements from 28 to 2!.</p>
+                                    <p>"We have been using School
+                                        Savings' cloud-based school
+                                        banking system
+                                        since 2008. It is secure and is
+                                        approved by Federal Reserve Bank
+                                        regulators for electronic
+                                        deposit processing. School
+                                        Savings™ is also
+                                        approved by the U.S. Department
+                                        of Education.</p>
                                 </div>
                             </li>
                         </ul>
