--- a/security.html
+++ b/security.html
@@ -57,7 +57,6 @@
 
 								</header>
 								<div class="major">
-									<!-- <div class="item-nested-security"> -->
 
 									<h2>What does FDIC
 										and
@@ -102,27 +101,24 @@
 										financial
 										institution clients.
 									</p>
-									<a href="#" class="image-security">
-										<img src="images/databits.jpg"
-											width="50%" height="auto"
-											alt="" /></a>
+
+									<img class="image main reveal"
+										src="images/databits.jpg"
+										width="50%" height="auto"
+										alt="image of data" />
+
+
 									<p>
 										<i
 											class="fa-solid fa-apple-whole"></i>
-
-										Secure
-										software is fundamental to
-										banking. School
-										Savings
-										works hard to ensure its
-										authentication
-										systems, password
-										management,
-										data
-										encryption and
-										software updates utilize
-										best
-										practices.
+										Secure software is fundamental
+										to banking. School Savings works
+										hard
+										to ensure its
+										authentication systems, password
+										management, data encryption and
+										software updates
+										utilize best practices.
 									</p>
 									<p>
 										<i
@@ -161,8 +157,7 @@
 										data security
 										procedures and protocols.
 									</p>
-									<!--
-									</div> -->
+
 								</div>
 								<div class="nacha">
 									<h2>
