deleted unused files

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <body class="is-preload">
 
+
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -111,7 +112,7 @@
 						data-position="top right" />
 				</article>
 				<article>
-					<img src="images/Girlwithmoneyjar_sm-removebg-preview.jpg"
+					<img src="images/Girlwithmoneyjar.jpg"
 						alt="girl with jar full of coins"
 						data-position="botttom left" />
 				</article>
