--- a/security.html
+++ b/security.html
@@ -46,8 +46,8 @@
 
 					</header>
 					<a href="#" class="image main reveal">
-						<img src="images/security.jpg"
-							alt="crook stealing" /></a>
+						<img src="images/low_light_group.jpg"
+							alt="data center staff meeting" /></a>
 
 					<section class="main">
 						<section id="security"
