final review and spell check

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                             src="images/co-workers-phone.jpg"
                             alt="group around table" /></a>
                     <p>Increase financial literacy in your community and
-                        develop benficial relationships with schools and
+                        develop beneficial relationships with schools and
                         families. Contact
                         us today to seamlessly implement School Savings
                         and stay ahead
