--- a/gettingstarted.html
+++ b/gettingstarted.html
@@ -69,7 +69,7 @@
                             Savings provides the online deposit
                             software
                             and
-                            electroncially credits the students'
+                            electronically credits the students'
                             accounts through
                             the
                             Federal
