--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<article>
 					<img src="images/Girlwithmoneyjar.jpg"
 						alt="girl with jar full of coins"
-						data-position="botttom left" />
+						data-position="bottom left" />
 				</article>
 				<article>
 					<img src="images/japanese_children.jpg"
@@ -175,7 +175,7 @@
 							Since 1996
 						</h3>
 						<p>School Savings posts student deposits
-							eletronically avoiding manual deposit
+							electronically avoiding manual deposit
 							posting</p>
 					</section>
 				</div>
@@ -332,7 +332,7 @@
 							<p>School Savings is a great way to teach
 								future customers the value of money and
 								the mechanics of banking. And, it's one
-								of the most popular activies in town!
+								of the most popular activities in town!
 							</p>
 							<ul class="actions special">
 								<li><a href="./howitworks.html"
