--- a/security.html
+++ b/security.html
@@ -72,7 +72,7 @@
 										regulator of
 										national
 										banks--the Office of the
-										Comproller of the
+										Comptroller of the
 										Currency (OCC) and the FDIC.
 									</p>
 
