--- a/testimonials.html
+++ b/testimonials.html
@@ -43,7 +43,7 @@
 
                     <a href="#" class="image main reveal"><img
                             src="images/meeting.jpg"
-                            alt="climbing mountain in winter" /></a>
+                            alt="group meeting" /></a>
                     <section class="posts">
                         <article>
                             <i class="fa-solid.fa-apple-whole"></i>
