--- a/index.html
+++ b/index.html
@@ -2,17 +2,33 @@
 <html lang="en">
 
 <head>
-	<title>School Savings</title>
 	<meta charset="utf-8" />
+	<title>School Savings&trade;</title>
+	<meta name="ROBOTS" content="INDEX,  FOLLOW" />
 	<meta name="viewport"
 		content="width=device-width, initial-scale=1" />
+	<meta content="IE=edge,chrome=1">
+	<meta name="description"
+		content="School Savings is a social enterprise that teaches children to save by accepting their saving deposits AT SCHOOL.">
+	<meta name="keywords"
+		content="school banking, school savings, bank-at-school, kids bank, in-school branch, saving, financial literacy, college saving,  school saving, credit unions, banks, financial education ">
+	<meta name="author" content="Sherry Avena">
+
+	<meta property="og:title_name " content="School Savings">
+	<meta property="og:image:width" content="1280">
+	<meta property="og:image:height" content="720">
+	<meta property="og:url" content="https//:www.schoolsavings.com">
+	<meta property="og:description"
+		content="!IMPORTANT: School Savings is a social enterprise that teaches children to save by accepting their saving deposits AT SCHOOL!">
+
 	<link rel="apple-touch-icon" sizes="180x180"
 		href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32"
 		href="/favicon-32x32.png">
+	<link rel="icon" type="image/ico" sizes="32x32" href="/favicon-ico">
 	<link rel="icon" type="image/png" sizes="16x16"
 		href="/favicon-16x16.png">
-	<!-- <link rel="manifest" href="/site.webmanifest"> -->
+
 
 	<link rel=" stylesheet" href="assets/css/fontawesome-all.min.css" />
 	<link rel=" stylesheet" href="assets/css/main.css" />
