replaced back to school image

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						data-position="bottom right" />
 				</article>
 				<article>
-					<img src="images/BackToSchool.jpeg"
+					<img src="images/Back-to-School.svg"
 						alt="back to school poster"
 						data-position="top right" />
 				</article>
