change slider order

--- a/index.html
+++ b/index.html
@@ -118,25 +118,27 @@
 			</div>
 			<div class="slider">
 				<article>
-					<img src="images/child_coinjar.jpg"
-						alt="child sitting on floor with jar of coins"
-						data-position="bottom right" />
-				</article>
-				<article>
 					<img src="images/Back-to-School.svg"
 						alt="back to school poster"
 						data-position="top right" />
-				</article>
-				<article>
-					<img src="images/Girlwithmoneyjar.jpg"
-						alt="girl with jar full of coins"
-						data-position="bottom left" />
 				</article>
 				<article>
 					<img src="images/japanese_children.jpg"
 						alt="group of children walking"
 						data-position="top left" />
 				</article>
+
+				<article>
+					<img src="images/Girlwithmoneyjar.jpg"
+						alt="girl with jar full of coins"
+						data-position="bottom left" />
+				</article>
+				<!-- <article>
+					<img src="images/child_coinjar.jpg"
+						alt="child sitting on floor with jar of coins"
+						data-position="bottom right" />
+				</article> -->
+
 			</div>
 		</section>
 
