--- a/security.html
+++ b/security.html
@@ -56,164 +56,120 @@
 								<header class="intro-security">
 
 								</header>
-								<div class="major">
+								<section class="security-section">
+									<div class="content-block">
+										<h2>What does FDIC and OCC
+											compliant mean?</h2>
+										<p><span class="icon"><i
+													class="fa-solid fa-apple-whole"></i></span>
+											School Savings must meet or
+											exceed the security
+											requirements
+											of the regulator of national
+											banks—the Office of the
+											Comptroller of the Currency
+											(OCC) and the FDIC.
+										</p>
+										<p><span class="icon"><i
+													class="fa-solid fa-apple-whole"></i></span>
+											Our servers are housed in a
+											data center that meets SOC 2
+											Type II security
+											requirements. This means the
+											data center is
+											audited to confirm it has
+											information security
+											policies and
+											procedures in place to
+											protect our data. Each year
+											we must
+											provide a SOC 2 "Attestation
+											of Compliance" report to our
+											financial institution
+											clients.
+										</p>
+										<img class="image main reveal"
+											src="images/databits.jpg"
+											alt="image of data" />
+										<p><span class="icon"><i
+													class="fa-solid fa-apple-whole"></i></span>
+											Secure software is
+											fundamental to banking.
+											School Savings
+											works hard to ensure its
+											authentication systems,
+											password
+											management, data encryption,
+											and software updates utilize
+											best practices.
+										</p>
+										<p><span class="icon"><i
+													class="fa-solid fa-apple-whole"></i></span>
+											It is estimated that 80
+											percent of security
+											violations are
+											caused by untrained
+											personnel. School
+											Savings&trade; trains
+											its personnel in the latest
+											security protocols. In
+											addition,
+											it maintains strict
+											limitations to software
+											access and
+											administration.
+										</p>
+										<p><span class="icon"><i
+													class="fa-solid fa-apple-whole"></i></span>
+											School Savings&trade;
+											carries insurance to protect
+											its
+											partners and customers from
+											any errors or omissions
+											encountered in its data
+											security procedures and
+											protocols.
+										</p>
+									</div>
 
-									<h2>What does FDIC
-										and
-										OCC compliant mean?</h2>
-									<p><i
-											class="fa-solid fa-apple-whole"></i>
+									<div class="content-block nacha">
+										<h2>National Automated
+											Clearinghouse Association
+											(NACHA)</h2>
+										<p><span class="icon"><i
+													class="fa-solid fa-apple-whole"></i></span>
+											School Savings also complies
+											with NACHA regulations that
+											dictate procedures and
+											requirements for sending
+											data files
+											through the Federal Reserve
+											Bank.
+										</p>
+									</div>
+								</section>
 
-										School
-										Savings must meet or exceed
-										the
-										security
-										requirements of the
-										regulator of
-										national
-										banks--the Office of the
-										Comptroller of the
-										Currency (OCC) and the FDIC.
-									</p>
-
-									<p><i
-											class="fa-solid fa-apple-whole"></i>
-
-										Our
-										servers are housed in a data
-										center
-										that meets SOC 2 Type II
-										security
-										requirements. This means the
-										data center is
-										audited to
-										confirm
-										it has information security
-										policies and
-										procedures in place to
-										protect
-										our
-										data. Each year we must
-										provide
-										a SOC 2
-										"Attestation of Compliance"
-										report to our
-										financial
-										institution clients.
-									</p>
-
-									<img class="image main reveal"
-										src="images/databits.jpg"
-										width="50%" height="auto"
-										alt="image of data" />
-
-
-									<p>
-										<i
-											class="fa-solid fa-apple-whole"></i>
-										Secure software is fundamental
-										to banking. School Savings works
-										hard
-										to ensure its
-										authentication systems, password
-										management, data encryption and
-										software updates
-										utilize best practices.
-									</p>
-									<p>
-										<i
-											class="fa-solid fa-apple-whole"></i>
-
-										It is
-										estimated that 80 percent of
-										security
-										violations
-										are caused by untrained
-										personnel. School
-										Savings&trade; trains its
-										personnel in the
-										latest
-										security
-										protocols. In addition it
-										maintains strict
-										limitations to software
-										access
-										and
-										administration.
-									</p>
-									<p>
-										<i
-											class="fa-solid fa-apple-whole"></i>
-
-										School
-										Savings&trade; carries
-										insurance
-										to protect
-										its
-										partners and customers from
-										any
-										errors or
-										omissions encountered in its
-										data security
-										procedures and protocols.
-									</p>
-
-								</div>
-								<div class="nacha">
-									<h2>
-										National Automated Clearinghouse
-										Association
-										(NACHA)
-									</h2>
-								</div>
+							</div>
 
 
-								<div class="item-nested-security">
-									<p>
+							<!-- Wrapper -->
+							<div class="wrapper">
+								<div class="inner">
 
-									<p> <i
-											class="fa-solid fa-apple-whole"></i>
-
-										School Savings also complies
-										with
-										NACHA
-										regulations that dictate
-										procedures
-										and
-										requirements for sending data
-										files
-										through the
-										Federal Reserve Bank.
-									</p>
-
+									<!-- Footer -->
+									<div id="footer-placeholder"></div>
 								</div>
 							</div>
 			</div>
 
-
-		</div>
-
-	</div>
-
-
-	<!-- Wrapper -->
-	<div class="wrapper">
-		<div class="inner">
-
-			<!-- Footer -->
-			<div id="footer-placeholder"></div>
-		</div>
-	</div>
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/modal.js"></script>
-	<script src="assets/js/menu.js"></script>
+			<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="assets/js/modal.js"></script>
+			<script src="assets/js/menu.js"></script>
 
 
 
