--- a/testimonials.html
+++ b/testimonials.html
@@ -86,120 +86,120 @@
                 </article>
                 </section>
 
-                <section class="wrapper ">
+                <section class="wrapper testimonials">
                     <div class="inner">
-                        <h2>Hear from our Clients</h2>
-
-                        <ul>
+                        <ul class="testimonial-list">
+                            <h2>Hear from our Clients</h2>
                             <li>
-                                <span class="icon major"> <img
-                                        src="images/kelly.jpg"
-                                        width="80px" height="80px"
-                                        alt="photo"></span>
-                                <h4>First Interstate Bank Foundation
-                                </h4>
-                                <div id="main">
-                                    <i
-                                        class="fa-solid fa-apple-whole"></i>
-                                    <p>School Savings streamlined our
-                                        existing
-                                        MiniBank program.</p>
-                                    <p>"First Interstate has hosted a
-                                        school banking program for 20
-                                        years, much
-                                        of it using an in-house system
-                                        that required manual posting.
-                                        Switching
-                                        to School Savings™ and utilizing
-                                        its online management and
-                                        electronic
-                                        deposit systems has helped make
-                                        our program more streamlined and
-                                        convenient for both our school
-                                        banking customers and our
-                                        employees."</p>
-                                </div>
-
-                            </li>
-                            <li>
-                                <span class="icon major"> <img
-                                        src="images/Leighton-Patti.jpg"
+                                <figure>
+                                    <img src="images/kelly.jpg"
                                         width="80px" height="80px"
                                         alt="photo">
-                                </span>
-
-                                <h4>Martha's Vineyard Bank</h4>
-                                <div id="main">
-                                    <i
-                                        class="fa-solid fa-apple-whole"></i>
-                                    <p>Our
-                                        schools love the program!</p>
-                                    <p>"We used School Savings' school
-                                        banking technology for
-                                        twenty-four (24)
-                                        years beginning with their
-                                        disk-based program. In 2002 we
-                                        moved to their
-                                        cloud-based system and tripled
-                                        our number of schools to 2500.
-                                        Their
-                                        technology reduced our school
-                                        banking Operations staff from 28
-                                        to 2
-                                        before the merger."</p>
-                                </div>
+                                    <figcaption>
+                                        <h4>First Interstate Bank
+                                            Foundation</h4>
+                                        <p>School Savings streamlined
+                                            our existing
+                                            MiniBank program.</p>
+                                        <p>"First Interstate has hosted
+                                            a school banking
+                                            program for 20 years, much
+                                            of it using an
+                                            in-house system that
+                                            required manual
+                                            posting. Switching to School
+                                            Savings™ and
+                                            utilizing its online
+                                            management and
+                                            electronic deposit systems
+                                            has helped make
+                                            our program more streamlined
+                                            and convenient
+                                            for both our school banking
+                                            customers and
+                                            our employees."</p>
+                                    </figcaption>
+                                </figure>
                             </li>
                             <li>
-                                <span class="icon major"> <img
-                                        src="images/member_2.jpg"
+                                <figure>
+                                    <img src="images/Leighton-Patti.jpg"
                                         width="80px" height="80px"
                                         alt="photo">
-                                </span>
-
-                                <h4>Washington Mutual</h4>
-                                <div id="main">
-                                    <i
-                                        class="fa-solid fa-apple-whole"></i>
-                                    <p>School
-                                        Savings' system reduced
-                                        our
-                                        staffing
-                                        requirements from 28 to 2!.</p>
-                                    <p>"We have been using School
-                                        Savings' cloud-based school
-                                        banking system
-                                        since 2008. It is secure and is
-                                        approved by Federal Reserve Bank
-                                        regulators for electronic
-                                        deposit processing. School
-                                        Savings™ is also
-                                        approved by the U.S. Department
-                                        of Education.</p>
-                                </div>
+                                    <figcaption>
+                                        <h4>Martha's Vineyard Bank</h4>
+                                        <p>Our schools love the program!
+                                        </p>
+                                        <p>"We used School Savings'
+                                            school banking
+                                            technology for twenty-four
+                                            (24) years
+                                            beginning with their
+                                            disk-based program. In
+                                            2002 we moved to their
+                                            cloud-based system
+                                            and tripled our number of
+                                            schools to 2500.
+                                            Their technology reduced our
+                                            school banking
+                                            Operations staff from 28 to
+                                            2 before the
+                                            merger."</p>
+                                    </figcaption>
+                                </figure>
+                            </li>
+                            <li>
+                                <figure>
+                                    <img src="images/member_2.jpg"
+                                        width="80px" height="80px"
+                                        alt="photo">
+                                    <figcaption>
+                                        <h4>Washington Mutual</h4>
+                                        <p>School Savings' system
+                                            reduced our staffing
+                                            requirements from 28 to 2!.
+                                        </p>
+                                        <p>"We have been using School
+                                            Savings'
+                                            cloud-based school banking
+                                            system since
+                                            2008. It is secure and is
+                                            approved by
+                                            Federal Reserve Bank
+                                            regulators for
+                                            electronic deposit
+                                            processing. School
+                                            Savings™ is also approved by
+                                            the U.S.
+                                            Department of Education."
+                                        </p>
+                                    </figcaption>
+                                </figure>
                             </li>
                         </ul>
                     </div>
-            </div>
-            </section>
+                </section>
 
-            <!-- Wrapper -->
-            <div class="wrapper">
-                <div class="inner">
+                <!-- </section> -->
 
-                    <!-- Footer -->
-                    <div id="footer-placeholder"></div>
+                <!-- Wrapper -->
+                <div class="wrapper">
+                    <div class="inner">
+
+                        <!-- Footer -->
+                        <div id="footer-placeholder"></div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
-        <script src="assets/js/modal.js"></script>
-        <script src="assets/js/menu.js"></script>
+            <!-- Scripts -->
+            <script src="assets/js/jquery.min.js"></script>
+            <script src="assets/js/browser.min.js"></script>
+            <script src="assets/js/breakpoints.min.js"></script>
+            <script src="assets/js/util.js"></script>
+            <script src="assets/js/main.js"></script>
+            <script src="assets/js/modal.js"></script>
+            <script src="assets/js/menu.js"></script>
 
 
 </body>
