--- a/achievements.html
+++ b/achievements.html
@@ -10,10 +10,10 @@
         <link rel=" stylesheet"
                 href="assets/css/fontawesome-all.min.css" />
 
-        <link rel="stylesheet"
+        <!-- <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
                 integrity="sha512-Ky4hKcsoJrk+oSjs9zV8AP/9gr5bBUkauTJQe5H+zXsbv9XXW0Yq3xPpczPz1NQgcl8qjE2P/OP+M7vc9/H5zQ=="
-                crossorigin="anonymous" referrerpolicy="no-referrer" />
+                crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
         <link rel=" stylesheet" href="assets/css/main.css" />
 </head>
