--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="slider">
 				<article>
-					<img src="images/Back-to-School.svg"
+					<img src="images/halloween.png"
 						alt="back to school poster"
 						data-position="top right" />
 				</article>
