--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JDWLSJ3YE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5JDWLSJ3YE');
+</script>
 	<meta charset="utf-8" />
 	<title>School Savings&trade;</title>
 	<meta name="ROBOTS" content="INDEX,  FOLLOW" />
@@ -118,12 +127,12 @@
 			</div>
 			<div class="slider">
 				<article>
-					<img src="images/japanese_children.jpg"
+					<img src="images/1510.jpg"
 						alt="back to school poster"
 						data-position="top right" />
 				</article>
 				<article>
-					<img src="images/halloween.png"
+					<img src="images/viv_snowshoes.jpg"
 						alt="group of children walking"
 						data-position="top left" />
 				</article>
@@ -400,10 +409,9 @@
 	<div id="contest-popup" class="popup">
 		<div class="popup-content">
 			<h2>Start Saving Again!</h2>
-			<p>Make a deposit by October 1st to enter drawing for School
-				Supplies Box! <strong>10 Winners!</strong></p>
+			<p>Make 3 deposits by December 13th to enter drawing for Squishmallow! <strong>10 Winners!</strong></p>
 			<span class="close-contests">&times;</span>
-			<img src="images/SCHOOLSUPPLIESBOX.jpg"
+			<img src="images/squishmallowHoliday.jpg"
 				alt="Back to School Contest">
 		</div>
 	</div>
