--- a/howitworks.html
+++ b/howitworks.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JDWLSJ3YE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5JDWLSJ3YE');
+</script>
     <title>How it Works!</title>
     <meta charset="utf-8" />
     <meta name="viewport"
