--- a/index.html
+++ b/index.html
@@ -103,9 +103,8 @@
 						cooperation with local schools.
 					</p>
 					<ul class="actions special">
-						<li><a href="./howitworks.html"
-								class="button primary1">Learn
-								More!</a>
+						<li><a href="howitworks.html"
+								class="button primary">Create Family Relationships!</a>
 						</li>
 					</ul>
 
@@ -117,9 +116,8 @@
 
 					</p>
 					<ul class="actions special">
-						<li><a href="./gettingstarted.html"
-								class="button primary1">Start
-								Here!</a>
+						<li><a href="gettingstarted.html"
+								class="button primary">Accept Deposits at School!</a>
 						</li>
 					</ul>
 
@@ -251,8 +249,7 @@
 						<p>
 						<ul class="actions special">
 							<li><a href="./howitworks.html"
-									class="button primary">Learn
-									More</a>
+									class="button primary">Teach Children to Save!</a>
 							</li>
 						</ul>
 
@@ -345,7 +342,7 @@
 							</p>
 							<ul class="actions special">
 								<li><a href="./achievements.html"
-										class="button primary">More</a>
+										class="button primary">Benefit from 40 year's experience!</a>
 								</li>
 							</ul>
 						</div>
@@ -363,7 +360,7 @@
 							</p>
 							<ul class="actions special">
 								<li><a href="./howitworks.html"
-										class="button primary">More</a>
+										class="button primary">Get Started Today!</a>
 								</li>
 
 							</ul>
