--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 							</p>
 							<ul class="actions special">
 								<li><a href="./achievements.html"
-										class="button primary">Benefit from 40 year's experience!</a>
+										class="button primary">Benefit from 40 years' experience!</a>
 								</li>
 							</ul>
 						</div>
